Fixed docs out of the screen bug.

--- a/docs/source/_static/style.css
+++ b/docs/source/_static/style.css
@@ -7,10 +7,8 @@
 }
 @media (min-width: 65em) {
     .content {
-        width: 60em;
         margin-left: auto;
         margin-right: auto;
-        padding-right: 16em;
     }
 }
 @media (min-width: 82em) {
